sre-challenge/fiskaly_q4/networking.tf
resource "aws_security_group" "fiskaly-q4" {
  vpc_id = data.aws_vpc.main.id
  name   = "Fiskaly-Q4-Nodes"

  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "80"
    to_port     = "80"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

}
